# libsfc

./: .gitignore  CMakeLists.txt  LICENSE  REUSE.toml  checksum.c  header.c  header.h  mapping.c  mapping.h  rom.c  sfc.c
.github/workflows/: build.yml  reuse.yml
LICENSES/: BSD-3-Clause.txt
example/: CMakeLists.txt  main.c
include/: sfc.h
include/sfc/: checksum.h  header.h  rom.h
mangle/: CMakeLists.txt  main.c
public/: sfc.h
src/: checksum.c  detect.c  detect.h  find_last_set.c  find_last_set.h  header.c  header.h  last_bit.c  last_bit.h  map.c  map.h  mapping.c  mapping.h  msb.h  offset.h  rom.c  sfc.c  util.h
test/res/: SMW.d.smc
tests/: CMakeLists.txt  CanDeduceCopier.c  CanIntrospectCopier.c  CanReadRom.c  PRAGE.d.smc  SMW2.d.smc  can_deduce_copier.c  can_deduce_map.c  can_read_rom.c  util.h
verify/: CMakeLists.txt  main.c
